<resources>
    <string name="app_name">BachaoApp</string>

    <!--Common String-->
    <string name="permission_required">Please grant the permission to use the microphone</string>
    <string name="start_service">START LISTEN</string>
    <string name="stop_service">STOP SERVICE</string>
    <string name="no_internet">Please Check your Internet connection</string>
    <string name="voice_recognizer_is_active">Voice Recognizer is active...</string>
    <string name="ask_permission">Please allow Speech to always run in the background,else our services can\'t be accessed when you are in distress</string>
    <string name="allow">ALLOW</string>
    <string name="enable_autostart">Enable AutoStart</string>
    <string name="my_service_name">com.sac.speechdemo.MyService</string>
    <string name="please_wait">Please wait</string>
    <string name="common_success">Operation Successful</string>
    <string name="common_error">Operation Failed</string>

    <!--MainActivity-->
    <string name="timer">timer</string>
    <string name="status">status</string>
    <string name="start_recording">start recording</string>
    <string name="stop_recording">stop recording</string>
    <string name="play_recording">play recording</string>
    <string name="stop_playing">stop playing</string>
    <string name="recording_started">Recording Started</string>
    <string name="recording_play">Recording Started Playing</string>
    <string name="recognised_word">recognised word</string>

    <!--LoginActivity-->
    <string name="login">Login</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="submit">Submit</string>
    <string name="no_account">No Account?</string>
    <string name="registration">Registration</string>

    <!--RegistrationActivity-->
    <string name="name">Name</string>
    <string name="user_type">User Type</string>
    <string name="isvolunteer">isVolunteer</string>
    <string name="secret_word">Secret Word</string>
    <string name="email">Email</string>
    <string name="emergency_mobile_number">Emergency Mobile Number</string>
    <string name="previous_experience">Previous Volunteer Experience</string>
    <string name="occupation">Occupation</string>
    <string name="latitude_longitude">Latitude Longitude</string>
    <string name="division">Division</string>
    <string name="district">District</string>
    <string name="upazila">Upazila</string>
    <string name="address">Address</string>
    <string name="blood_group">Blood Group</string>
    <string name="enter_name">Please enter name</string>
    <string name="enter_mobile_number">Please enter mobile_number</string>
    <string name="select_user_type">Select user type</string>
    <string name="please_select_user_type">Please select user type</string>
    <string name="enter_secret_word">Please enter secret word</string>
    <string name="select_is_volunteer">Please select are you volunteer or not</string>
    <string name="enter_email">Please enter email</string>
    <string name="enter_emergency_mobile_number">Please enter emergency mobile number</string>
    <string name="enter_previous_experience">Please enter role of previous volunteer experience</string>
    <string name="enter_occupation">Please enter occupation</string>
    <string name="check_internet_for_sync">Can not sync because of no internet</string>
    <string name="syncing_lat_lon">Please wait, Syncing your current LatLon from gps</string>
    <string name="syncing_address">Please wait, Syncing your current address from gps</string>
    <string name="enter_blood_group">Please enter blood group</string>
    <string name="enter_password">Please enter password</string>
    <string name="is_volunteer">Is volunteer?</string>
    
    
    <!--push notification-->
    <string name="common_pushNotification_body">"You have a new notification"</string>

</resources>