<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viemodel"
            type="com.singularitybd.bachaoapp.viewmodel.LoginViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textColor="@color/black"
                    android:textSize="24sp"
                    android:layout_gravity="center"
                    android:layout_marginTop="100dp"/>

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editText_mobile"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="40dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/bg_card_view"
                    android:hint="@string/mobile_number"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:paddingStart="26dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="26dp"
                    android:paddingBottom="16dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatEditText
                    android:id="@+id/editText_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginStart="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginEnd="40dp"
                    android:background="@drawable/bg_card_view"
                    android:hint="@string/password"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:paddingStart="26dp"
                    android:paddingTop="16dp"
                    android:paddingEnd="26dp"
                    android:paddingBottom="16dp"
                    android:singleLine="true"
                    android:textColor="@color/black"
                    android:textSize="14sp" />

                <androidx.appcompat.widget.AppCompatButton
                    android:id="@+id/button_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/submit"
                    android:textColor="@color/white"
                    android:backgroundTint="?colorPrimary"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:layout_marginTop="40dp">

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView_no_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/no_account"
                        android:textColor="@color/black"/>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:id="@+id/textView_registration"
                        android:layout_toEndOf="@+id/textView_no_account"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/registration"
                        android:textColor="?colorPrimary"
                        android:layout_marginStart="20dp"/>

                </RelativeLayout>

            </LinearLayout>

        </ScrollView>

    </RelativeLayout>

</layout>