<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="com.singularitybd.bachaoapp.viewmodel.MainActivityViewModel" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_recognised_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/recognised_word" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_recognised_word_times"
            android:layout_toEndOf="@+id/textView_recognised_word"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="(0)" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_recognised_word"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/status" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_timer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_status"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/timer" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_play_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_timer"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/play_recording" />

        <!--<androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_off_audio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_play_recording"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="10dp"
            android:text="Stop Audio Recording"
            android:visibility="gone"/>-->

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_stop_recording"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textView_play_recording"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"
            android:text="@string/stop_recording" />

        <Button
            android:id="@+id/btStartService"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="20dp"
            android:text="@string/start_service" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/current_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/current_lat_lon"
            android:layout_centerHorizontal="true"
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/current_lat_lon"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_above="@+id/imageView_seek_help"
            android:layout_centerHorizontal="true"
            android:text="current Location syncing..."
            android:textColor="?colorPrimary"
            android:textStyle="bold" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/imageView_seek_help"
            android:layout_width="250dp"
            android:layout_height="200dp"
            android:layout_centerInParent="true"
            android:src="@drawable/ic_logo_shohay" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textview_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imageView_seek_help"
            android:layout_centerHorizontal="true"
            android:text="Press the upper button to seek help"
            android:textColor="?colorPrimary"
            android:textStyle="bold"/>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textView_volunteer_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/textview_instruction"
            android:layout_centerHorizontal="true"
            android:text="Request Sending to volunteer.."
            android:textColor="?colorPrimary"
            android:textStyle="bold"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

    </RelativeLayout>

</layout>